<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/displayTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/n_nhello_n_press_next_to_start_playing"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageSwitcher
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageSw" >

    </ImageSwitcher>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:id="@+id/next"
        android:layout_alignBaseline="@+id/prev"
        android:layout_alignBottom="@+id/prev"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="next"/>

    <Button
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prev"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:onClick="previous"/>
</RelativeLayout>